@@ -9,6 +9,10 @@ from 2.7.18 to 2.7.19
 - removing too restrictive control of compression level inside libdar,
   dar CLI already does that and libzstd/libz/libbz2/... also do that and
   triggers an error in case of invalid value.
+- handling the case where a binary patch is also a hard link: at restoration
+  time, the inode is tried to be patched again when a second hard link is
+  met, which leads dar to report an error and exiting with code 5 (while
+  restoration was fine).
 
 from 2.7.17 to 2.7.18
 - fixed bug that broke the ability to repair an archive through ftp/sftp
